imgSketch scrollbar fix

--- a/fragments/imgSketch/imgSketch.css
+++ b/fragments/imgSketch/imgSketch.css
@@ -4,7 +4,7 @@
 
 #notePhoto.photoview {
     width: 100%;
-    height: calc(100% - 8px);
+    height: 100%;
 }
 
 .photoview > .win-viewport {
